fix some part that have no dark mode version

--- a/components/send-message-place/send-message-place.module.scss
+++ b/components/send-message-place/send-message-place.module.scss
@@ -48,6 +48,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  color: var(--message-text-font-color);
 }
 
 .close {
