--- a/components/text-typing/text-typing.module.scss
+++ b/components/text-typing/text-typing.module.scss
@@ -15,6 +15,7 @@
     padding-inline-end: 2rem;
     font-family: inherit;
     font-size: 14px;
+    color: var(--message-input-font-color);
     background-color: var(--message-input-bg-color);
     resize: none;
   }
