--- a/style/globals.scss
+++ b/style/globals.scss
@@ -18,6 +18,7 @@ main {
   --delete-account-hover: #ff6464;
   --font-grey: #757575;
   --message-input-bg-color: #353535;
+  --message-input-font-color: #ffffff;
   --setting-header-bg-color: #353535;
   --setting-header-font-color: #fff;
   --setting-font-color: #fff;
@@ -109,6 +110,7 @@ main {
   --delete-account-hover: #ff6464;
   --font-grey: #757575;
   --message-input-bg-color: #fff;
+  --message-input-font-color: #000;
   --setting-header-bg-color: #fff;
   --search-bar-border-top-color: #000;
   --send-message-place-bg-color: #fff;
